--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
                 <input type="text" placeholder="输入搜索你喜欢的商品">
                 <input type="button" placeholder="搜索">
                 <div class="shop">
+                   <a href="shopcar.html">
                     <p>购物车
                         <span>(0)</span>
                     </p>
+                   </a>
                 </div>
             </div>
             <div class="novWord">
