最新商品列表

--- a/goodslist.html
+++ b/goodslist.html
@@ -113,96 +113,102 @@
     <div id="main">
         <div class="main-con">
             <ul>
-                <li>
-                    <img src="images/list.jpg" alt="">
-                    <h3>凡客卫衣 廓形连帽 黑色</h3>
-                    <p>
-                        <span>售价￥210</span>
-                        <span>充值购买相当于￥78</span>
-                    </p>
-                </li>
+                <a href="details.html">
+                    <li>
+                        <img src="images/list.jpg" alt="">
+                        <h3>凡客卫衣 廓形连帽 黑色</h3>
+                        <p>
+                            <span>售价￥<i class="befor">210</i></span>
+                            <span>充值购买相当于￥<i class="now">78</i></span>
+                        </p>
+                    </li>
+                </a>
                 <li>
                     <img src="images/list1.jpg" alt="">
                     <h3>卫衣 创可贴 成名曲 黑色</h3>
                     <p>
-                        <span>售价￥199</span>
-                        <span>充值购买相当于￥68</span>
+                        <span>售价￥<i class="befor">199</i> </span>
+                        <span>充值购买相当于￥<i class="now">70</i></span>
                     </p>
                 </li>
                 <li>
                     <img src="images/list2.jpg" alt="">
                     <h3>卫衣 创可贴  惹毛我了 白色</h3>
                     <p>
-                        <span>售价￥200</span>
-                        <span>充值购买相当于￥58</span>
+                        <span>售价￥<i class="befor">200</i> </span>
+                        <span>充值购买相当于￥<i class="now">70</i></span>
                     </p>
                 </li>
                 <li>
                     <img src="images/list3.jpg" alt="">
                     <h3>卫衣 创可贴  惹毛我了 黑色</h3>
                     <p>
-                        <span>售价￥189</span>
-                        <span>充值购买相当于￥48</span>
+                        <span>售价￥<i class="befor">250</i></span>
+                        <span>充值购买相当于<i class="now">88</i></span>
                     </p>
                 </li>
                 <li>
                     <img src="images/list4.jpg" alt="">
                     <h3>卫衣 创可贴 成名曲 黑色</h3>
                     <p>
-                        <span>售价￥300</span>
-                        <span>充值购买相当于￥198</span>
+                        <span>售价￥<i class="befor">250</i></span>
+                        <span>充值购买相当于￥<i class="now">88</i></span>
                     </p>
                 </li>
                 <li>
                     <img src="images/list6.jpg" alt="">
                     <h3>童装卫衣 圆领 熊本熊 S1 黑色</h3>
                     <p>
-                        <span>售价￥199</span>
-                        <span>充值购买相当于￥99</span>
+                        <span>售价￥<i class="befor">250</i></span>
+                        <span>充值购买相当于<i class="now">88</i></span>
                     </p>
                 </li>
                 <li>
                     <img src="images/list7.jpg" alt="">
                     <h3>童装卫衣 圆领 熊本熊 S10 黑色</h3>
                     <p>
-                        <span>售价￥200</span>
-                        <span>充值购买相当于￥100</span>
+                        <span>售价￥<i class="befor">199</i></span>
+                        <span>充值购买相当于￥<i class="now">99</i></span>
                     </p>
                 </li>
                 <li>
                     <img src="images/list8.jpg" alt="">
                     <h3>童装卫衣 圆领 熊本熊 S10 浅花灰</h3>
+                    <p>
+                        <span>售价￥<i class="befor">199</i></span>
+                        <span>充值购买相当于￥<i class="now">99</i></span>
+                    </p>
                 </li>
                 <li>
                     <img src="images/list9.jpg" alt="">
                     <h3>童装卫衣 圆领 熊本熊 S6 黑色</h3>
                     <p>
-                        <span>售价￥210</span>
-                        <span>充值购买相当于￥78</span>
+                        <span>售价￥<i class="befor">199</i></span>
+                        <span>充值购买相当于￥<i class="now">99</i></span>
                     </p>
                 </li>
                 <li>
                     <img src="images/list.jpg" alt="">
                     <h3>凡客卫衣 廓形连帽 黑色</h3>
                     <p>
-                        <span>售价￥220</span>
-                        <span>充值购买相当于￥88</span>
+                        <span>售价￥<i class="befor">300</i></span>
+                        <span>充值购买相当于￥<i class="now">150</i></span>
                     </p>
                 </li>
                 <li>
                     <img src="images/list1.jpg" alt="">
                     <h3>卫衣 创可贴 成名曲 黑色</h3>
                     <p>
-                        <span>售价￥280</span>
-                        <span>充值购买相当于￥50</span>
+                        <span>售价￥<i class="befor">300</i></span>
+                        <span>充值购买相当于￥<i class="now">150</i></span>
                     </p>
                 </li>
                 <li>
                     <img src="images/list2.jpg" alt="">
                     <h3>卫衣 创可贴  惹毛我了 白色</h3>
                     <p>
-                        <span>售价￥310</span>
-                        <span>充值购买相当于￥178</span>
+                        <span>售价￥<i class="befor">300</i></span>
+                        <span>充值购买相当于￥<i class="now">150</i></span>
                     </p>
                 </li>
             </ul>
@@ -305,5 +311,17 @@
     })
     $(".two").mouseenter(function () {
         $(".two").stop()
+    })
+    // 发送请求
+    $.ajax({
+        url:"http://192.168.1.5:8080/goodslist",
+        success:function(data){
+            for(let i = 0;i < $("h3").length;i++){
+                $("h3")[i].html(data[0].name)
+                $(".befor")[i].html(data[0].pricebefor)
+                $(".now")[i].html(data[0].pricenow)   
+            }
+          
+        }
     })
 </script>
